--- a/holiholic_android/Holiholic/app/src/main/res/layout/activity_splash.xml
+++ b/holiholic_android/Holiholic/app/src/main/res/layout/activity_splash.xml
@@ -6,11 +6,9 @@
     tools:context="com.holiholic.holiholic.SplashActivity">
 
     <pl.droidsonroids.gif.GifImageView
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:src="@drawable/splash"
-        android:background="@android:color/background_dark"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp" />
+        android:background="@android:color/background_dark" />
 
 </android.support.constraint.ConstraintLayout>
